# research-slides-template

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: _quarto.yml  index.qmd  pyproject.toml  recent.qmd  slides.qmd  slides.yaml  styles.css
{{cookiecutter.project_name}}/src/slidedeck/: __init__.py  add.py  build.py  cli.py  history.py
